fixed date field in registration on Safari

--- a/app/assets/stylesheets/main/modules/modal/_sign_up.scss
+++ b/app/assets/stylesheets/main/modules/modal/_sign_up.scss
@@ -11,7 +11,7 @@
   }
 
   div.field.date select {
-    width: 95px;
+    width: 93px;
 
     &.month {
       width: 139px;
